SB-1319 Create a page for managing storages and repositories
- Migrate to ngxs for storing admin storage browsing data.
- Remove resolvers and load data on demand to avoid requesting unnecessary data.

--- a/src/app/modules/storage-management/dialogs/storage-form/storage-form.dialog.component.html
+++ b/src/app/modules/storage-management/dialogs/storage-form/storage-form.dialog.component.html
@@ -12,7 +12,13 @@
         </mat-form-field>
         <div class="spacer">&nbsp;</div>
         <mat-form-field>
-            <input formControlName="basedir" matInput placeholder="Base directory" required>
+            <textarea formControlName="basedir"
+                      matInput
+                      cdkTextareaAutosize
+                      #autosize="cdkTextareaAutosize"
+                      cdkAutosizeMinRows="1"
+                      placeholder="Base directory">
+            </textarea>
             <mat-error *ngIf="form.get('basedir').invalid">
                 <form-field-errors [field]="form.get('basedir')"></form-field-errors>
             </mat-error>
