--- a/src/app/modules/storage-management/pages/browse-storages/components/list-repositories/list-repositories.component.html
+++ b/src/app/modules/storage-management/pages/browse-storages/components/list-repositories/list-repositories.component.html
@@ -3,52 +3,68 @@
         <ng-container *ngFor="let column of repositoryColumns;">
             <ng-container [matColumnDef]="column">
                 <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
-                <td mat-cell *matCellDef="let repository" (click)="navigateToRepository(repository)" class="clickable">
+                <td mat-cell *matCellDef="let repository" (click)="navigateToDirectoryListing(repository)" class="clickable">
                     {{repository[column]}}
                 </td>
             </ng-container>
         </ng-container>
 
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions</th>
-            <td mat-cell *matCellDef="let repository">
-                <a (click)="confirmDeletion(repository)">
-                    <i class="icon ion-md-trash"></i>
-                </a>
+            <th class="actions" mat-header-cell *matHeaderCellDef>Actions</th>
+            <td class="actions text-center" mat-cell *matCellDef="let repository">
+                <ul>
+                    <li>
+                        <a (click)="navigateToRepositoryUpdate(repository)">
+                            <i class="icon ion-md-create"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a (click)="confirmDeletion(repository)">
+                            <i class="icon ion-md-trash"></i>
+                        </a>
+                    </li>
+                </ul>
             </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="repositoryColumnsWithActions; sticky: true"></tr>
-        <tr mat-row *matRowDef="let element; columns: repositoryColumnsWithActions;"></tr>
+        <ng-container *ngIf="(selectedStorage$ | async)">
+            <tr mat-row *matRowDef="let element; columns: repositoryColumnsWithActions;"></tr>
+        </ng-container>
     </table>
 
-    <div *ngIf="(loading$ | async)" class="overlay">
-        <mat-progress-spinner color="primary" mode="indeterminate" [strokeWidth]="4"></mat-progress-spinner>
-    </div>
+    <ng-container *ngIf="(loadingRepositories$ | async)">
+        <div class="overlay">
+            <mat-progress-spinner color="primary" mode="indeterminate" [strokeWidth]="4"></mat-progress-spinner>
+        </div>
+    </ng-container>
 
-    <ng-container *ngIf="!(loading$ | async)">
-        <div *ngIf="repositoriesSource.filteredData.length < 1 && storageId" class="overlay">
+    <ng-container *ngIf="!(loadingRepositories$ | async)">
+        <div *ngIf="repositoriesSource.filteredData.length < 1 && (selectedStorage$ | async)" class="overlay">
             <div fxLayout="column">
-                <span>No repositories were found in {{ storageId }}.</span>
+                <span>No repositories were found in {{ (selectedStorage$ | async) }}.</span>
                 <div style="margin-top: 15px;">
-                    <mat-menu #repositoryTypes="matMenu" xPosition="before" class="menu-2-offset">
-                        <button mat-menu-item [routerLink]="['/admin/storages', storageId, 'create', 'hosted']">Hosted repository</button>
-                        <button mat-menu-item [routerLink]="['/admin/storages', storageId, 'create', 'group']">Group repository</button>
-                        <button mat-menu-item [routerLink]="['/admin/storages', storageId, 'create', 'proxy']">Proxy repository</button>
+                    <mat-menu #matMenuContent="matMenu" xPosition="before" class="menu-2-offset">
+                        <button mat-menu-item *ngFor="let type of repositoryTypes"
+                                [routerLink]="createRepositoryLink(type)">
+                            {{ type | titlecase }} repository
+                        </button>
                     </mat-menu>
                     <!--  -->
-                    <button mat-raised-button color="primary" [matMenuTriggerFor]="repositoryTypes" #menuTrigger="matMenuTrigger">
+                    <button mat-raised-button color="primary"
+                            [matMenuTriggerFor]="matMenuContent"
+                            #matMenuTriggerContent="matMenuTrigger">
                         Add a repository
                         <i class="ion splitter"
-                           [class.ion-md-arrow-dropdown]="!menuTrigger.menuOpen"
-                           [class.ion-md-arrow-dropup]="menuTrigger.menuOpen"
+                           [class.ion-md-arrow-dropdown]="!matMenuTriggerContent.menuOpen"
+                           [class.ion-md-arrow-dropup]="matMenuTriggerContent.menuOpen"
                         ></i>
                     </button>
                 </div>
             </div>
         </div>
 
-        <div *ngIf="!storageId" class="overlay">
+        <div *ngIf="!(selectedStorage$ | async)" class="overlay">
             Select a storage to show repositories.
         </div>
     </ng-container>
