--- a/src/app/modules/storage-management/pages/browse-storages/components/list-storages/list-storages.component.html
+++ b/src/app/modules/storage-management/pages/browse-storages/components/list-storages/list-storages.component.html
@@ -4,18 +4,21 @@
         <thead>
             <tr class="mat-header-row">
                 <th class="mat-header-cell cdk-column-repository mat-column-repository mat-table-sticky ng-star-inserted"
-                    style="width: 80%;">
+                    style="width: 75%;">
                     Storage
                 </th>
                 <th class="mat-header-cell cdk-column-repository mat-column-repository mat-table-sticky ng-star-inserted"
-                    style="width: 20%; text-align: right;">
+                    style="width: 25%; text-align: right; font-size: 18px;">
                     <a (click)="toggleStorageSearch()"
                        [class.active]="(showSearch$ | async)"
-                       style="font-size: 18px; margin-right: 10px;">
+                       style="margin-right: 10px;">
                         <i class="icons ion-md-search"></i>
                     </a>
-                    <a (click)="openStorageForm()" style="font-size: 18px;">
+                    <a (click)="openStorageForm()" style="margin-right: 10px;">
                         <i class="icons ion-md-add-circle-outline"></i>
+                    </a>
+                    <a (click)="refreshStorages()">
+                        <i class="icons ion-md-refresh"></i>
                     </a>
                 </th>
             </tr>
