--- a/src/app/modules/core/dialogs/confirm/confirm.dialog.component.html
+++ b/src/app/modules/core/dialogs/confirm/confirm.dialog.component.html
@@ -3,9 +3,7 @@
 </div>
 
 <div matDialogContent>
-    <div *ngIf="!(loading$ | async)" style="width: 100%;">
-        {{ data.message }}
-    </div>
+    <div *ngIf="!(loading$ | async)" style="width: 100%;" [innerHTML]="data.message"></div>
 
     <div *ngIf="(loading$ | async)" class="loading">
         <mat-progress-spinner [strokeWidth]="4" mode="indeterminate"></mat-progress-spinner>
