--- a/src/app/modules/user-management/pages/manage-user/form/access-model-listing/user-access-model.component.html
+++ b/src/app/modules/user-management/pages/manage-user/form/access-model-listing/user-access-model.component.html
@@ -145,8 +145,8 @@
                                 <mat-form-field floatLabel="always">
                                     <input matInput placeholder="Path" formControlName="path" type="search"/>
 
-                                    <mat-error *ngIf="privilegeForm.get('path').invalid">
-                                        <form-field-errors [field]="privilegeForm.get('path')"></form-field-errors>
+                                    <mat-error>
+                                        <form-field-errors formControlName="path"></form-field-errors>
                                     </mat-error>
                                 </mat-form-field>
                             </div>
