--- a/src/app/modules/server-settings/pages/manage-settings/manage-settings.component.html
+++ b/src/app/modules/server-settings/pages/manage-settings/manage-settings.component.html
@@ -14,10 +14,10 @@
                 <div class="tabContent">
                     <div fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="10%">
                         <mat-form-field>
-                            <input matInput placeholder="Instance name" formControlName="instanceName">
+                            <input matInput placeholder="Instance name" formControlName="instanceName" autocomplete="off">
                             <mat-hint>Give this instance a cool name.</mat-hint>
-                            <mat-error *ngIf="settingsForm.get('instanceName').invalid">
-                                <form-field-errors [field]="settingsForm.get('instanceName')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="instanceName"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
@@ -30,8 +30,8 @@
                                     The URL from which Strongbox is accessed (i.e. if you're using reverse proxy
                                     this should be the public url)
                                 </mat-hint>
-                                <mat-error *ngIf="settingsForm.get('baseUrl').invalid">
-                                    <form-field-errors [field]="settingsForm.get('baseUrl')"></form-field-errors>
+                                <mat-error>
+                                    <form-field-errors formControlName="baseUrl"></form-field-errors>
                                 </mat-error>
                             </mat-form-field>
                         </div>
@@ -46,8 +46,8 @@
                         <mat-form-field>
                             <input matInput placeholder="Port" formControlName="port">
                             <mat-hint>The port on which Strongbox will be listening (Default: 48080).</mat-hint>
-                            <mat-error *ngIf="settingsForm.get('port').invalid">
-                                <form-field-errors [field]="settingsForm.get('port')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="port"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
@@ -70,8 +70,8 @@
                                       formControlName="allowedOrigins"
                             ></textarea>
                             <mat-hint>Insert one origin per line</mat-hint>
-                            <mat-error *ngIf="getCorsConfigurationGroup('allowedOrigins').invalid">
-                                <form-field-errors [field]="getCorsConfigurationGroup('allowedOrigins')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="allowedOrigins"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
@@ -95,15 +95,15 @@
                     <div fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="3%">
                         <mat-form-field>
                             <input matInput placeholder="SMTP Host" formControlName="host" autocomplete="off">
-                            <mat-error *ngIf="getSmtpConfigurationGroup('host').invalid">
-                                <form-field-errors [field]="getSmtpConfigurationGroup('host')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="host"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
 
                         <mat-form-field>
                             <input matInput placeholder="SMTP Port" formControlName="port" autocomplete="off">
-                            <mat-error *ngIf="getSmtpConfigurationGroup().invalid">
-                                <form-field-errors [field]="getSmtpConfigurationGroup('port')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="port"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
 
@@ -121,8 +121,8 @@
                     <div fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="3%">
                         <mat-form-field>
                             <input matInput placeholder="SMTP Username" formControlName="username">
-                            <mat-error *ngIf="getSmtpConfigurationGroup('username').invalid">
-                                <form-field-errors [field]="getSmtpConfigurationGroup('username')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="username"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
@@ -131,7 +131,7 @@
                         <mat-form-field>
                             <input matInput placeholder="SMTP Password" formControlName="password" type="password">
                             <mat-error *ngIf="getSmtpConfigurationGroup('password').invalid">
-                                <form-field-errors [field]="getSmtpConfigurationGroup('password')"></form-field-errors>
+                                <form-field-errors formControlName="password"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
@@ -157,15 +157,15 @@
                     <div fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="3%">
                         <mat-form-field>
                             <input matInput placeholder="Host" formControlName="host" autocomplete="off">
-                            <mat-error *ngIf="getProxyConfigurationGroup('host').invalid">
-                                <form-field-errors [field]="getProxyConfigurationGroup('host')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="host"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
 
                         <mat-form-field>
                             <input matInput placeholder="Port" formControlName="port" autocomplete="off">
-                            <mat-error *ngIf="getProxyConfigurationGroup('port').invalid">
-                                <form-field-errors [field]="getProxyConfigurationGroup('port')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="port"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
 
@@ -184,8 +184,8 @@
                     <div fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="3%">
                         <mat-form-field>
                             <input matInput placeholder="Username" formControlName="username">
-                            <mat-error *ngIf="getProxyConfigurationGroup('username').invalid">
-                                <form-field-errors [field]="getProxyConfigurationGroup('username')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="username"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
@@ -193,8 +193,8 @@
                     <div fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="3%">
                         <mat-form-field>
                             <input matInput placeholder="Password" formControlName="password" type="password">
-                            <mat-error *ngIf="getProxyConfigurationGroup('password').invalid">
-                                <form-field-errors [field]="getProxyConfigurationGroup('password')"></form-field-errors>
+                            <mat-error>
+                                <form-field-errors formControlName="password"></form-field-errors>
                             </mat-error>
                         </mat-form-field>
                     </div>
