--- a/src/app/modules/storage-management/pages/browse-repository/browse-repository.component.html
+++ b/src/app/modules/storage-management/pages/browse-repository/browse-repository.component.html
@@ -1,3 +1,3 @@
 <app-page-container [loading]="loading$" [breadcrumbs]="breadcrumbs" class="noPadding">
-    <app-directory-listing [path]="(path$ | async)" [allowBack]="(allowBack$ | async)"></app-directory-listing>
+    <app-directory-listing [path]="(path$ | async)" [allowBack]="(allowBack$ | async)" [baseUrl]="baseUrl"></app-directory-listing>
 </app-page-container>
