--- a/src/app/shared/layout/components/directory-listing/directory-listing.component.html
+++ b/src/app/shared/layout/components/directory-listing/directory-listing.component.html
@@ -33,8 +33,8 @@
         </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsWithActions; sticky: true"></tr>
-    <tr mat-row *matRowDef="let element; columns: columnsWithActions;"></tr>
+    <tr mat-header-row *matHeaderRowDef="showActions ? columnsWithActions : columns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let element; columns: showActions ? columnsWithActions : columns;"></tr>
 </table>
 
 <ng-container *ngIf="directoryListing.data.length < 1">
