--- a/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
+++ b/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
@@ -192,7 +192,7 @@
                     <mat-form-field>
                         <input matInput placeholder="Host" formControlName="host">
                         <mat-error>
-                            <form-field-errors formControlName="host')"></form-field-errors>
+                            <form-field-errors formControlName="host"></form-field-errors>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field>
