Issue-1143 Add validation to Route Management form

--- a/src/app/modules/route-management/pages/manage-route/manage-route.component.html
+++ b/src/app/modules/route-management/pages/manage-route/manage-route.component.html
@@ -4,7 +4,7 @@
 
         <div class="routeDetails" fxLayout.lt-md="column" fxLayout="row" fxLayoutGap="10%">
 
-            <mat-form-field>
+            <mat-form-field *ngIf="operation !== getRouteOperations().CREATE">
                 <input matInput placeholder="UUID" formControlName="uuid">
                 <mat-error *ngIf="routeForm.get('uuid').invalid">
                     <form-field-errors formControlName="uuid"></form-field-errors>
